# fft_gpu

./: README.md
cpu/: CMakeLists.txt  CMakeLists.txt.old
cpu/src/: .main.cpp.swp  main.cpp  sndread.cpp  sndread.h
cpu_fftw/: CMakeLists.txt
cpu_fftw/src/: main.cpp
doc/: documentation.tex
gpu/: CMakeLists.txt
gpu/src/: cuda_util.h  main.cu  sndread.h
